--- a/views/characters.hbs
+++ b/views/characters.hbs
@@ -1,10 +1,8 @@
 <h1>{{title}}</h1>
 
-{{! This is a single-line comment }}
 <table border="1" cellpadding="5" cellspacing="0">
   <thead>
     <tr>
-      <th>ID</th>
       <th>Name</th>
       <th>Race</th>
       <th>Class</th>
@@ -20,7 +18,6 @@
     {{#if characters.length}}
       {{#each characters}}
         <tr>
-          <td>{{idCharacters}}</td>
           <td>{{displayName}}</td>
           <td>{{race}}</td>
           <td>{{characterClass}}</td>
@@ -60,17 +57,15 @@
 
 <h2>Update Character</h2>
 <form method="POST" action="/update-character">
-
   Character ID:
-  <select name="idCharacters">
+  <select name="idCharacters" required>
     {{#each characters}}
-      <option value="{{idCharacters}}">
-        {{idCharacters}}
-      </option>
+    <option value="{{idCharacters}}">
+      {{displayName}} (ID: {{idCharacters}})
+    </option>
     {{/each}}
   </select>
   <br><br>
-
   Name: <input type="text" name="displayName"><br>
   Race: <input type="text" name="race"><br>
   Class: <input type="text" name="characterClass"><br>
@@ -82,4 +77,5 @@
 
   <button type="submit">Update Character</button>
 </form>
+
 
