--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{{title}}</title>
-  <link rel="stylesheet" href="/styles.css"> <!-- your CSS -->
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <nav>
@@ -14,6 +14,9 @@
     <a href="/turns">Turns</a>
     <a href="/health_logs">Health Logs</a>
     <a href="/status_effects">Status Effects</a>
+    <form method="POST" action="/reset-database">
+    <button type="submit">RESET DATABASE</button>
+    </form>
   </nav>
 
   <hr>
@@ -22,5 +25,8 @@
 
 </body>
 </html>
+
+
+
 
 
