Refactor character encounters template and forms
Updated character encounter form to include character and encounter selection. Improved display of current HP and modified form actions for adding and updating encounters.

--- a/views/characters_encounters.hbs
+++ b/views/characters_encounters.hbs
@@ -1,5 +1,5 @@
+{{!Adapted from the provided bsg-people.hbs starter code}}
 <h1>{{title}}</h1>
-
 <table border="1" cellpadding="5" cellspacing="0">
   <thead>
     <tr>
@@ -8,69 +8,70 @@
       <th>Initiative Order</th>
       <th>Initiative Roll</th>
       <th>Current HP</th>
+      {{!Our Own Work}}
       <th>Remove</th>
     </tr>
   </thead>
   <tbody>
-    {{#if characters_encounters.length}}
       {{#each characters_encounters}}
         <tr>
           <td>{{displayName}}</td>
           <td>{{nameOfLocation}}</td>
           <td>{{initiativeOrder}}</td>
           <td>{{initiativeRoll}}</td>
-          <td>{{currentHitPoint}}</td>
+          <td>{{currentHitPoint}} / {{maxHitPoint}}</td>
           <td>
-          <form method="POST" action="/delete-character-encounter">
-            <input type="hidden" name="idCharacterEncounter" value="{{idCharacterEncounter}}">
-            <button type="submit">Delete</button>
-          </form>
+            <form method="POST" action="/delete-character-encounter">
+              <input type="hidden" name="idCharacterEncounter" value="{{idCharacterEncounter}}">
+              <button type="submit">Delete</button>
+            </form>
           </td>
         </tr>
       {{/each}}
-    {{else}}
-      <tr>
-        <td colspan="6">No Character Encounters found.</td>
-      </tr>
-    {{/if}}
   </tbody>
 </table>
 
-<h2>Add New Character Encounter</h2>
-<form method="POST" action="/add-character-encounter">
-   Character Encounter ID:
-  <select name="idCharacterEncounter" required>
-    {{#each characters_encounters}}
-      <option value="{{idCharacterEncounter}}">
-        {{idCharacterEncounter}} - {{displayName}} at {{nameOfLocation}}
+{{!Our Own Work}}
+
+<<h2>Add New Character Encounter</h2>
+<form method="POST" action="/characters_encounters/add">
+  Character:
+  <select name="idCharacter" required>
+    {{#each characters}}
+      <option value="{{idCharacters}}">
+        {{displayName}} (ID: {{idCharacters}})
       </option>
     {{/each}}
   </select>
   <br><br>
-
+  Encounter:
+  <select name="idEncounter" required>
+    {{#each encounters}}
+      <option value="{{idEncounters}}">
+        {{nameOfLocation}} (ID: {{idEncounters}})
+      </option>
+    {{/each}}
+  </select>
+  <br><br>
   Initiative Order: <input type="number" name="initiativeOrder" required><br>
-  Initiative Roll: <input type="number" name="initiativeRoll" required><br>
-  Current HP: <input type="number" name="currentHitPoint" required><br>
-
+  Initiative Roll: <input type="number" name="initiativeRoll" required><br><br>
   <button type="submit">Add Character Encounter</button>
 </form>
 
+
+{{!Our Own Work}}
 <h2>Update Character Encounter</h2>
-<form method="POST" action="/update-character-encounter">
-  Character Encounter ID:
+<form method="POST" action="/characters_encounters/update">
+  Character Encounter:
   <select name="idCharacterEncounter" required>
     {{#each characters_encounters}}
       <option value="{{idCharacterEncounter}}">
-        {{idCharacterEncounter}} - {{displayName}} at {{nameOfLocation}}
+        {{displayName}} at {{nameOfLocation}} (ID: {{idCharacterEncounter}})
       </option>
     {{/each}}
   </select>
   <br><br>
-
-  Initiative Order: <input type="number" name="initiativeOrder"><br>
-  Initiative Roll: <input type="number" name="initiativeRoll"><br>
-  Current HP: <input type="number" name="currentHitPoint"><br>
-
+  Initiative Order: <input type="number" name="initiativeOrder" required><br>
+  Initiative Roll: <input type="number" name="initiativeRoll" required><br><br>
   <button type="submit">Update Character Encounter</button>
 </form>
-
