--- a/views/health_logs.hbs
+++ b/views/health_logs.hbs
@@ -1,5 +1,5 @@
+{{!Adapted from the provided bsg-people.hbs starter code}}
 <h1>{{title}}</h1>
-
 <table border="1" cellpadding="5" cellspacing="0">
   <thead>
     <tr>
@@ -7,11 +7,11 @@
       <th>Encounter</th>
       <th>HP Change</th>
       <th>Source</th>
+      {{!Our Own Work}}
       <th>Remove</th>
     </tr>
   </thead>
   <tbody>
-    {{#if health_logs.length}}
       {{#each health_logs}}
         <tr>
           <td>{{displayName}}</td>
@@ -26,32 +26,32 @@
           </td>
         </tr>
       {{/each}}
-    {{else}}
-      <tr>
-        <td colspan="5">No Health Logs available.</td>
-      </tr>
-    {{/if}}
   </tbody>
 </table>
 
+{{!Our Own Work}}
 <h2>Add New Health Log</h2>
 <form method="POST" action="/health_logs/add">
   Select Turn:
   <select name="idTurns" required>
-    <option value="" disabled selected>Select Health Log</option>
-    {{#each health_logs}}
-      <option value="{{idHealthChangeLogs}}">
-        {{displayName}} - {{nameOfLocation}} (Health Log ID: {{idHealthChangeLogs}})
+    <option value="" disabled selected>Select</option>
+    {{#each charEncounters}}
+      <option value="{{idTurns}}">
+        {{displayName}} - {{nameOfLocation}} (Turn ID: {{idTurns}})
       </option>
     {{/each}}
   </select>
   <br><br>
-
-  HP Change: <input type="number" name="hitPointChange" required><br>
-  Source: <input type="text" name="hitPointChangeSource" required><br>
+  HP Change:
+  <input type="number" name="hitPointChange" required>
+  <br><br>
+  Source:
+  <input type="text" name="hitPointChangeSource" required>
+  <br><br>
   <button type="submit">Add Health Log</button>
 </form>
 
+{{!Our Own Work}}
 <h2>Update Health Log</h2>
 <form method="POST" action="/health_logs/update">
   Select Log:
@@ -59,13 +59,16 @@
     <option value="" disabled selected>Select Health Log</option>
     {{#each health_logs}}
       <option value="{{idHealthChangeLogs}}">
-        {{displayName}} - {{nameOfLocation}} (Health Log ID: {{idHealthChangeLogs}})
+        {{displayName}} - {{nameOfLocation}} (Log ID: {{idHealthChangeLogs}})
       </option>
     {{/each}}
   </select>
   <br><br>
-
-  HP Change: <input type="number" name="hitPointChange" required><br>
-  Source: <input type="text" name="hitPointChangeSource" required><br>
+  HP Change:
+  <input type="number" name="hitPointChange" required>
+  <br><br>
+  Source:
+  <input type="text" name="hitPointChangeSource" required>
+  <br><br>
   <button type="submit">Update Health Log</button>
 </form>
