--- a/views/turns.hbs
+++ b/views/turns.hbs
@@ -1,5 +1,5 @@
+{{!Adapted from the provided bsg-people.hbs starter code}}
 <h1>{{title}}</h1>
-
 <table border="1" cellpadding="5" cellspacing="0">
   <thead>
     <tr>
@@ -7,20 +7,20 @@
       <th>Character</th>
       <th>Encounter</th>
       <th>Action Taken</th>
-      <th>Round Number</th>
+      {{!-- <th>Round Number</th> --}}
       <th>Action Order</th>
+      {{!Our Own Work}}
       <th>Remove</th>
     </tr>
   </thead>
   <tbody>
-    {{#if turns.length}}
       {{#each turns}}
         <tr>
           <td>{{idTurns}}</td>
           <td>{{displayName}}</td>
           <td>{{nameOfLocation}}</td>
           <td>{{actionTaken}}</td>
-          <td>{{roundNumber}}</td>
+          {{!-- <td>{{roundNumber}}</td> --}}
           <td>{{actionOrderInRound}}</td>
           <td>
             <form method="POST" action="/turns/delete">
@@ -30,14 +30,10 @@
           </td>
         </tr>
       {{/each}}
-    {{else}}
-      <tr>
-        <td colspan="7">No Turns available.</td>
-      </tr>
-    {{/if}}
   </tbody>
 </table>
 
+{{!Our Own Work}}
 <h2>Add New Turn</h2>
 <form method="POST" action="/turns/add">
   Select Character Encounter:
@@ -50,13 +46,14 @@
     {{/each}}
   </select>
   <br><br>
-
   Action Taken: <input type="text" name="actionTaken" required><br>
   Round Number: <input type="number" name="roundNumber" required><br>
   Action Order in Round: <input type="number" name="actionOrderInRound" required><br>
   <button type="submit">Add Turn</button>
 </form>
 
+
+{{!Our Own Work}}
 <h2>Update Turn</h2>
 <form method="POST" action="/turns/update">
   Select Turn:
@@ -69,7 +66,6 @@
     {{/each}}
   </select>
   <br><br>
-
   Action Taken: <input type="text" name="actionTaken" required><br>
   Round Number: <input type="number" name="roundNumber" required><br>
   Action Order in Round: <input type="number" name="actionOrderInRound" required><br>
